--- a/radio/index.html
+++ b/radio/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>modular.radio</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
         body, html {
@@ -19,7 +20,7 @@
         #factorization-diagram {
             width: 600px; /* Width of the SVG element for a larger view */
             height: 600px; /* Height of the SVG element for a larger view */
-            animation: spin 20s linear infinite; /* Add rotation animation */
+            animation: spin 25s linear infinite; /* Add rotation animation */
         }
 
         @keyframes spin {
