--- a/radio/index.html
+++ b/radio/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>modular.radio</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
         body, html {
