--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>modular.bond</title>
+  <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="particles-js"> 
     <div class="title">
-      <h1 style="user-select: none;">modular.bond</h1>
     </div>
   </div> 
   <!-- Import Particles.js and app.js files -->
